--- a/Book Finder/Language/lang.ru-RU.xaml
+++ b/Book Finder/Language/lang.ru-RU.xaml
@@ -17,4 +17,5 @@
     <v:String x:Key="m_Back">Назад</v:String>
     <v:String x:Key="m_ReadBook">Прочитать книгу</v:String>
     <v:String x:Key="m_BuyBook">Купить книгу</v:String>
+    <v:String x:Key="Not_found">Не найдено</v:String>
 </ResourceDictionary>
