--- a/Book Finder/Language/lang.xaml
+++ b/Book Finder/Language/lang.xaml
@@ -17,4 +17,5 @@
     <v:String x:Key="m_Back">Back</v:String>
     <v:String x:Key="m_ReadBook">Read the book</v:String>
     <v:String x:Key="m_BuyBook">Buy the book</v:String>
+    <v:String x:Key="Not_found">Not found</v:String>
 </ResourceDictionary>
