--- a/Book Finder/SearchPage.xaml
+++ b/Book Finder/SearchPage.xaml
@@ -10,7 +10,7 @@
       TextElement.FontSize="13"
       TextOptions.TextFormattingMode="Ideal"
       TextOptions.TextRenderingMode="Auto"
-      Background="{DynamicResource MaterialDesignPaper}"
+      Background="#f3f3f3"
       d:DesignHeight="450" d:DesignWidth="800">
 
     <Grid>
@@ -31,15 +31,17 @@
                    FontWeight="Light"
                    Text="{DynamicResource m_Search_dep}"
                    TextWrapping="Wrap" 
-                   Margin="0,25,0,15"/>
+                   Margin="0,10,0,15"/>
         <StackPanel Orientation="Horizontal"
                     Grid.Row="1"
                     VerticalAlignment="Center"
                     HorizontalAlignment="Center">
-        <TextBox x:Name="Search"
+            <TextBox x:Name="Search"
                  Grid.Row="1"
                  MinWidth="300"
+                 MaxWidth="600"
                  Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                 materialDesign:HintAssist.Background="#f3f3f3"
                  materialDesign:HintAssist.Hint="{DynamicResource m_Search_st}"
                  VerticalAlignment="Center"
                  HorizontalAlignment="Center"
@@ -60,11 +62,6 @@
                     Margin="5,5,5,5"
                     Click="Btn_Search_Click"/>
         </StackPanel>
-        <!--<ProgressBar x:Name="CircularProgress"
-                     Style="{StaticResource MaterialDesignCircularProgressBar}"
-                     Grid.Row="3"
-                     Value="20"
-                     IsIndeterminate="True" />-->
         <WrapPanel Grid.Row="2"
                    VerticalAlignment="Center"
                    HorizontalAlignment="Left"
